# sketch

./: .gitignore  README.md  render.yaml
backend/: .dockerignore  CMakeLists.txt  Dockerfile
backend/src/: main.cpp
backend/src/models/: room.hpp  stroke.hpp  user_info.hpp
backend/src/protocol/: message_codec.hpp  message_handler.hpp  message_types.hpp
backend/src/server/: http_connection.hpp  ws_server.hpp  ws_session.hpp
backend/src/services/: board_service.hpp  presence_service.hpp  room_service.hpp
backend/src/utils/: rate_limiter.hpp  uuid.hpp
backend/tests/: backend_test.cpp  layer1_test.cpp  message_codec_test.cpp  presence_service_test.cpp  room_service_test.cpp
frontend/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: BoardCanvas.tsx  BoardPage.tsx  ConnectionStatus.tsx  CursorLayer.tsx  ErrorBoundary.tsx  JoinModal.tsx  PresencePanel.tsx  TextInput.tsx  Toast.tsx  Toolbar.tsx
frontend/src/hooks/: useCursorTracking.ts  useDrawing.ts  useWebSocket.ts
frontend/src/lib/: inbox.ts  outbox.ts  protocol.ts  wsClient.ts
frontend/src/store/: roomStore.ts  selectors.ts
frontend/src/utils/: colorUtils.ts  hitTest.ts  idGenerator.ts  lerp.ts  roomPersistence.ts
frontend/tests/: outbox.test.ts  roomStore.test.ts  wsClient.test.ts
